--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Big Todos</title>
     <link href="screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+    <link href="favicon.ico" rel="icon" type="image/x-icon" >
     
     <script type="text/javascript">
       
